Fix sidebar content height on Safari
Safari vh includes browser UI not just area the user can actually view - have to add backup rule using dvh which only measures viewable area. dvh still not >95% supported, hence why you still have to keep the vh rule as well.

--- a/bikespace_frontend/src/components/dashboard/sidebar-content/sidebar-content.module.scss
+++ b/bikespace_frontend/src/components/dashboard/sidebar-content/sidebar-content.module.scss
@@ -8,6 +8,7 @@ $actions-height: 70px;
   bottom: 70px;
   left: 0;
   height: calc(100vh - $actions-height);
+  height: calc(100dvh - $actions-height); // fix for safari
   width: 100vw;
   overflow-x: hidden;
   overflow-y: auto;
